--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -11,7 +11,9 @@
   position: absolute;
   background: url('../../assets/imgs/BG.svg') bottom no-repeat;
   width: 100vw;
+  background-size: cover;
   height: 100vh;
   top: 0;
   left: 0;
+  z-index: -66666;
 }
